Adding responsive functionallity  On branch master  Changes to be committed: 	modified:   package.json 	modified:   src/components/box/Menu.js 	modified:   src/components/box/ProfileBox.js 	modified:   src/components/pieces/ModalWindow.js 	modified:   src/components/screens/Screens.js 	modified:   src/components/scripts/Events.js 	modified:   src/components/styles/app.css 	modified:   src/components/styles/box/candidateAdminList.css 	modified:   src/components/styles/box/menu.css 	modified:   src/components/styles/box/profilebox.css 	modified:   src/components/styles/box/statisticsBox.css 	modified:   src/components/styles/screens/screens.css

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
+  "website": "http://sistema-elecciones.atwebpages.com",
+  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
